tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__SteamisNeverEnou-AAAAAAAAAAAAAAAAAAADEg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 786,
  "prerequisites": [
    838
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now you can make Advanced Circuits, which means it's time to build a Large Steel Boiler. Each one of these produces 1000 EU/t in Steam, which means you will need several Steam Turbines to convert it all to power! Keep in mind that the MV ones are less efficient, so calculate your losses when building your setup.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lSteam is Never Enough",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    838
  ],
  "rewards": [],
  "tasks": []
}
