tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__SteelMultiblockT-AAAAAAAAAAAAAAAAAAAAVw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 87,
  "prerequisites": [
    65,
    45
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Do you want to have tanks that can hold double the amount of the iron ones? Go ahead and make a steel tank. Everything else is the same.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lSteel Multiblock Tanks",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    65,
    45
  ],
  "rewards": [],
  "tasks": []
}
