tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__StillNotEnoughCh-AAAAAAAAAAAAAAAAAAADDQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 781,
  "prerequisites": [
    77,
    717
  ],
  "properties": {
    "auto_claim": false,
    "desc": "This oven is the best way to get charcoal and creosote (x50 faster than Railcraft's coke oven) and other byproducts. You will need tons of bronze, iron and steel to build it, but it's worth it. Finally, it will be possible to dismantle the charcoal pit.\n\nWith Cupronickel coils the oven is a bit slower. Each coil tier speeds up the charcoal production.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lStill Not Enough Charcoal?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    77,
    717
  ],
  "rewards": [],
  "tasks": []
}
