tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__TFFT-AAAAAAAAAAAAAAAAAAAKzQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2765,
  "prerequisites": [
    213
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The TFFT is very useful if you don't want to have a bunch of Super Tanks, it also has a modular structure so it can be up to x4.33 times bigger than numbers in this quest.\n\nWith the tier I storage field block, it consumes 27 EU/t but only has about 0.27x the storage capacity of a Super Tank I per fluid.\n\nWith the tier V storage field block it consumes 1134 EU/t and has about 0.54x the storage capacity of a QT III per fluid.\n\nWith the tier X storage field block it consumes 0EU/t (only tier X uses 0) and has about x3.3 capacity of T7 YOTTank (divide by 25 to get per 1 fluid)\n\nYou can use the multi hatch to access all the fluids at once with an ME Fluid Storage Bus or Fluid Ender Conduit.\n\n[note]Remember to turn auto-voiding on if you need it.[/note]",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lTFFT",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    213
  ],
  "rewards": [],
  "tasks": []
}
