tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__TNT-AAAAAAAAAAAAAAAAAAAC-g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 762,
  "prerequisites": [
    80
  ],
  "properties": {
    "auto_claim": false,
    "desc": "TNT is much more powerful than the powderbarrel but much harder to craft. There are LV and HV ways to craft. At LV you need heavy or light fuel to make some toluene which can be solidified to gelled toluene. Alternatively you can use sugar and plastic dust in a chemical reactor to make toluene more efficiently. Mix it with sulfuric acid to make TNT.\n\nThe HV petrol way requires an oil cracking unit to make all kinds of cracked fuel or cracked naphtha and a distillation tower to extract toluene from that.\nThough you can also go the wood tar route in mid-MV.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lTNT",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    80
  ],
  "rewards": [],
  "tasks": []
}
