tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__TheWaterProblems-AAAAAAAAAAAAAAAAAAADug==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 954,
  "prerequisites": [
    75,
    1231
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After entering the HV age you've found a way of making a water reservoir which solves the finite water problem. Craft it with some fused quartz glass, HV pumps, and cauldrons.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§6§lThe 'Water Problems' Are Solved",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    75,
    1231
  ],
  "rewards": [],
  "tasks": []
}
