tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__Tier2Manipulatin-Mf1D7e-LTaW3rbBRYmxBAQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 17260975369543762177,
  "prerequisites": [
    3289
  ],
  "properties": {
    "auto_claim": false,
    "desc": "After significant progression, you'll be able to upgrade the QFT to tier 2 by replacing the §3Neutron Pulse Manipulator§r casings with §3Cosmic Fabric Manipulator§r casings. Once installed, the QFT can perform the §6monaline skip§r, the §6first two naqline skips§r, and the §6netherite line skip§r.\n\nThese casings require more advanced materials, including §3Hyper-Stable Self-Healing Adhesive§r, which can only be crafted in a tier 1 QFT. This adhesive isn’t just excellent at sticking things together - it’s also built to withstand the intense energy flow of a tier 2, 3, or even tier 4 QFT! §o\n\nWho knows what kinds of materials you’ll need after this?!",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tier 2 Manipulating",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3289
  ],
  "rewards": [],
  "tasks": []
}
