tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultiblockGoals-AAAAAAAAAAAAAAAAAAAADA==__Tier2Shielding-AAAAAAAAAAAAAAAAAAAM2g==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3290,
  "prerequisites": [
    3288
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Consider improving your QFT's focusing capabilities by replacing your §3Neutron Shielding Core§r casings with §3Cosmic Fabric Shielding Core§r casings. Like the tier 2 manipulators, these also require §3Hyper-Stable Self-Healing Adhesive§r.",
    "global_share": false,
    "icon": null,
    "is_global": null,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Tier 2 Shielding",
    "party_single_reward": null,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3288
  ],
  "rewards": [],
  "tasks": []
}
